Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,7 @@
    ],
    "source": [
     "def calc_p_win(input):\n",
-    "    \n",
+    "    temp_df\n",
     "\n",
     "for idx,row in df.iterrows():\n",
     "    if idx == 0:\n",
