--- a/index.ipynb
+++ b/index.ipynb
@@ -243,7 +243,12 @@
    "source": [
     "def calc_p_win(input):\n",
     "    for idx,row in input.iterrows():\n",
-    "        \n",
+    "        if idx == 0:\n",
+    "            temp = df['Stay Win'].iloc[0]\n",
+    "            P_Stay_Win = temp/1\n",
+    "        else:\n",
+    "        temp = df['Stay Win'].iloc[0:idx]\n",
+    "        P_Stay_Win = sum(temp)/len(temp)\n",
     "\n",
     "for idx,row in df.iterrows():\n",
     "\n",
