Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,7 @@
     "    else:\n",
     "        temp = df['Stay Win'].iloc[0:idx]\n",
     "        P_Stay_Win = sum(temp)/len(temp)\n",
-    "        \n",
+    "    return p_win\n",
     "\n",
     "for idx,row in df.iterrows():\n",
     "\n",
