Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -242,12 +242,12 @@
    ],
    "source": [
     "def calc_p_win(input):\n",
-    "    for idx,row in input.iterrows():\n",
+    "    for idx,row in inpt.iterrows():\n",
     "        if idx == 0:\n",
-    "            temp = df['Stay Win'].iloc[0]\n",
+    "            temp = inpt['Stay Win'].iloc[0]\n",
     "            P_Stay_Win = temp/1\n",
     "    else:\n",
-    "        temp = df['Stay Win'].iloc[0:idx]\n",
+    "        temp = input['Stay Win'].iloc[0:idx]\n",
     "        P_Stay_Win = sum(temp)/len(temp)\n",
     "    return p_win\n",
     "\n",
