Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
     }
    ],
    "source": [
-    "def calc_p_win(input):\n",
+    "def calc_p_win(inpt):\n",
     "    for idx,row in inpt.iterrows():\n",
     "        if idx == 0:\n",
     "            temp = inpt['Stay Win'].iloc[0]\n",
