--- a/index.ipynb
+++ b/index.ipynb
@@ -247,13 +247,10 @@
     "            temp = inpt['Stay Win'].iloc[0]\n",
     "            P_Stay_Win = temp/1\n",
     "    else:\n",
-    "        temp = input['Stay Win'].iloc[0:idx]\n",
+    "        temp = inpt['Stay Win'].iloc[0:idx]\n",
     "        P_Stay_Win = sum(temp)/len(temp)\n",
     "    return p_win\n",
-    "\n",
-    "for idx,row in df.iterrows():\n",
-    "\n",
-    "    df['P_Stay_Win'].iloc[idx] = P_Stay_Win"
+    "\n"
    ]
   },
   {
