--- a/index.ipynb
+++ b/index.ipynb
@@ -241,14 +241,14 @@
     }
    ],
    "source": [
-    "for idx,row in inpt.iterrows():\n",
+    "\n",
+    "for idx,row in df.iterrows():\n",
     "    if idx == 0:\n",
     "        temp = inpt['Stay Win'].iloc[0]\n",
     "        P_Stay_Win = temp/1\n",
     "else:\n",
     "    temp = inpt['Stay Win'].iloc[0:idx]\n",
     "    P_Stay_Win = sum(temp)/len(temp)\n",
-    "return p_win\n",
     "\n"
    ]
   },
