--- a/index.ipynb
+++ b/index.ipynb
@@ -244,10 +244,10 @@
     "\n",
     "for idx,row in df.iterrows():\n",
     "    if idx == 0:\n",
-    "        temp = inpt['Stay Win'].iloc[0]\n",
+    "        temp = df['Stay Win'].iloc[0]\n",
     "        P_Stay_Win = temp/1\n",
     "else:\n",
-    "    temp = inpt['Stay Win'].iloc[0:idx]\n",
+    "    temp = df['Stay Win'].iloc[0:idx]\n",
     "    P_Stay_Win = sum(temp)/len(temp)\n",
     "\n"
    ]
