--- a/index.ipynb
+++ b/index.ipynb
@@ -225,23 +225,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/indexing.py:205: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self._setitem_with_indexer(indexer, value)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
+    "#calc probability of stayi\n",
     "for idx,row in df.iterrows():\n",
     "    if idx == 0:\n",
     "        temp = df['Stay Win'].iloc[0]\n",
@@ -255,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -289,35 +277,35 @@
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
@@ -331,35 +319,35 @@
        "    <tr>\n",
        "      <td>995</td>\n",
        "      <td>995</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.323618</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>996</td>\n",
        "      <td>996</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.323293</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>997</td>\n",
        "      <td>997</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.323972</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>998</td>\n",
        "      <td>998</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.324649</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>999</td>\n",
        "      <td>999</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.324324</td>\n",
        "    </tr>\n",
@@ -370,22 +358,22 @@
       ],
       "text/plain": [
        "     Iteration  Stay Win  Switch Win  P_Stay_Win\n",
-       "0            0         0           1    0.000000\n",
-       "1            1         0           1    0.000000\n",
-       "2            2         0           1    0.000000\n",
-       "3            3         0           1    0.000000\n",
-       "4            4         0           1    0.000000\n",
+       "0            0       0.0           1    0.000000\n",
+       "1            1       0.0           1    0.000000\n",
+       "2            2       0.0           1    0.000000\n",
+       "3            3       0.0           1    0.000000\n",
+       "4            4       0.0           1    0.000000\n",
        "..         ...       ...         ...         ...\n",
-       "995        995         0           1    0.323618\n",
-       "996        996         1           0    0.323293\n",
-       "997        997         1           0    0.323972\n",
-       "998        998         0           1    0.324649\n",
-       "999        999         0           1    0.324324\n",
+       "995        995       0.0           1    0.323618\n",
+       "996        996       0.0           0    0.323293\n",
+       "997        997       0.0           0    0.323972\n",
+       "998        998       0.0           1    0.324649\n",
+       "999        999       0.0           1    0.324324\n",
        "\n",
        "[1000 rows x 4 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
