Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#calc probability of stayi\n",
+    "#calc probability winning not switching\n",
+    "\n",
     "for idx,row in df.iterrows():\n",
     "    if idx == 0:\n",
     "        temp = df['Stay Win'].iloc[0]\n",
