--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#calc probability winning not switching\n",
+    "#calc probability winning when not switching\n",
     "\n",
     "for idx,row in df.iterrows():\n",
     "    if idx == 0:\n",
