Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -380,7 +380,16 @@
     }
    ],
    "source": [
-    "df"
+    "#calc probability winning when not switching\n",
+    "\n",
+    "for idx,row in df.iterrows():\n",
+    "    if idx == 0:\n",
+    "        temp = df['Stay Win'].iloc[0]\n",
+    "        P_Stay_Win = temp/1\n",
+    "    else:\n",
+    "        temp = df['Stay Win'].iloc[0:idx]\n",
+    "        P_Stay_Win = sum(temp)/len(temp)\n",
+    "    df['Switch Win'].iloc[idx]=P_Stay_Win"
    ]
   },
   {
