Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calc probability winning when not switching\n",
+    "\n",
+    "for idx,row in df.iterrows():\n",
+    "    if idx == 0:\n",
+    "        temp = df['Switch Win'].iloc[0]\n",
+    "        P_Stay_Win = temp/1\n",
+    "    else:\n",
+    "        temp = df['Switch Win'].iloc[0:idx]\n",
+    "        P_Stay_Win = sum(temp)/len(temp)\n",
+    "    df['Switch Win'].iloc[idx]=P_Stay_Win"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -279,35 +297,35 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -321,35 +339,35 @@
        "      <td>995</td>\n",
        "      <td>995</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.323618</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>996</td>\n",
        "      <td>996</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.323293</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>997</td>\n",
        "      <td>997</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.323972</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>998</td>\n",
        "      <td>998</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.324649</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>999</td>\n",
        "      <td>999</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.324324</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -359,37 +377,28 @@
       ],
       "text/plain": [
        "     Iteration  Stay Win  Switch Win  P_Stay_Win\n",
-       "0            0       0.0           1    0.000000\n",
-       "1            1       0.0           1    0.000000\n",
-       "2            2       0.0           1    0.000000\n",
-       "3            3       0.0           1    0.000000\n",
-       "4            4       0.0           1    0.000000\n",
+       "0            0       0.0         1.0    0.000000\n",
+       "1            1       0.0         1.0    0.000000\n",
+       "2            2       0.0         1.0    0.000000\n",
+       "3            3       0.0         1.0    0.000000\n",
+       "4            4       0.0         1.0    0.000000\n",
        "..         ...       ...         ...         ...\n",
-       "995        995       0.0           1    0.323618\n",
-       "996        996       0.0           0    0.323293\n",
-       "997        997       0.0           0    0.323972\n",
-       "998        998       0.0           1    0.324649\n",
-       "999        999       0.0           1    0.324324\n",
+       "995        995       0.0         1.0    0.323618\n",
+       "996        996       0.0         1.0    0.323293\n",
+       "997        997       0.0         1.0    0.323972\n",
+       "998        998       0.0         1.0    0.324649\n",
+       "999        999       0.0         1.0    0.324324\n",
        "\n",
        "[1000 rows x 4 columns]"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#calc probability winning when not switching\n",
-    "\n",
-    "for idx,row in df.iterrows():\n",
-    "    if idx == 0:\n",
-    "        temp = df['Stay Win'].iloc[0]\n",
-    "        P_Stay_Win = temp/1\n",
-    "    else:\n",
-    "        temp = df['Stay Win'].iloc[0:idx]\n",
-    "        P_Stay_Win = sum(temp)/len(temp)\n",
-    "    df['Switch Win'].iloc[idx]=P_Stay_Win"
+    "df"
    ]
   },
   {
