Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,7 @@
     "    else:\n",
     "        temp = df['Switch Win'].iloc[0:idx]\n",
     "        P_Stay_Win = sum(temp)/len(temp)\n",
-    "    df['Switch Win'].iloc[idx]=P_Stay_Win"
+    "    df['P_Switch Win'].iloc[idx]=P_Stay_Win"
    ]
   },
   {
