Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
     "    else:\n",
     "        temp = df['Stay Win'].iloc[0:idx]\n",
     "        P_Stay_Win = sum(temp)/len(temp)\n",
-    "    df['Stay Win'].iloc[idx]=P_Stay_Win\n",
+    "    df['P_Stay Win'].iloc[idx]=P_Stay_Win\n",
     "\n"
    ]
   },
@@ -274,7 +274,7 @@
     }
    ],
    "source": [
-    "#calc probability winning when not switching\n",
+    "#calc probability winning when always switching\n",
     "\n",
     "for idx,row in df.iterrows():\n",
     "    if idx == 0:\n",
