--- a/index.ipynb
+++ b/index.ipynb
@@ -199,7 +199,8 @@
    "source": [
     "applied_df=df.apply(lambda x: monty_hall(x),axis='columns',result_type='expand')\n",
     "df = pd.concat([df,applied_df],axis='columns')\n",
-    "df.columns=['Iteration','Stay Win','Switch Win']\n"
+    "df.columns=['Iteration','Stay Win','Switch Win']\n",
+    "\n"
    ]
   },
   {
