--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,7 @@
     "applied_df=df.apply(lambda x: monty_hall(x),axis='columns',result_type='expand')\n",
     "df = pd.concat([df,applied_df],axis='columns')\n",
     "df.columns=['Iteration','Stay Win','Switch Win']\n",
-    "\n"
+    "df['P_Stay_Win']\n"
    ]
   },
   {
