Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,8 @@
     "applied_df=df.apply(lambda x: monty_hall(x),axis='columns',result_type='expand')\n",
     "df = pd.concat([df,applied_df],axis='columns')\n",
     "df.columns=['Iteration','Stay Win','Switch Win']\n",
-    "df['P_Stay_Win']\n"
+    "df['P_Stay_Win'] = 0\n",
+    "df['P_Switch_Win']\n"
    ]
   },
   {
