--- a/index.ipynb
+++ b/index.ipynb
@@ -411,7 +411,7 @@
    "source": [
     "import matplotlib as plt\n",
     "\n",
-    "plt.scatter()"
+    "plt.scatter(df['Iteration'],)"
    ]
   },
   {
